auto/k3s/floci/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: floci-aws
spec:
  selector:
    app: floci-aws
  ports:
    - port: 4566
      targetPort: 4566
