auto/k3s/floci/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: floci-ui
spec:
  selector:
    app: floci-ui
  ports:
    - port: 4500
      targetPort: 4500
